--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+<script src="vendor/webgazer.js" type="text/javascript"></script>
 <script src='vendor/three.js'></script>
 <script src='vendor/dat.gui.min.js'></script>
 <div style='position: absolute; top: 0px; width: 100%;font-family:arial; font-weight: bolder; padding-top: 5px;'>
@@ -32,9 +33,46 @@
 
 	var scaling = 2560 / 64.62; // my 2560x1600 monitor is 64.62cm × 40.39cm
 
+	
+	// get eye position from webgazer
+	window.onload = async function() {
+		const webgazerInstance = await webgazer.setRegression('ridge').begin();
+		webgazerInstance.showVideoPreview(true) /* shows all video previews */
+		  .showPredictionPoints(false)
+		  .applyKalmanFilter(true); // Kalman Filter defaults to on.
+		
+		webgazerInstance.setGazeListener(async (data) => {
+			if (data == null) {
+				return;
+			}
+			const centerPosition = {
+				x: 320,
+				y: 240
+			}
+
+			const middleEyePosition = {
+				x: (data.eyeFeatures.left.imagex + data.eyeFeatures.right.imagex) / 2,
+				y: (data.eyeFeatures.left.imagey + data.eyeFeatures.right.imagey) / 2
+			};
+			console.log(middleEyePosition);
+			
+			const scale = 9;
+			perspectiveParams.x = (-middleEyePosition.x + centerPosition.x) / scale;
+			perspectiveParams.y = (-middleEyePosition.y + centerPosition.y) / scale;
+			console.log(perspectiveParams.x, perspectiveParams.y);
+			onParamsChange();
+		})
+	}
+
 	//////////////////////////////////////////////////////////////////////////////////
 	//		add an object in the scene
 	//////////////////////////////////////////////////////////////////////////////////
+
+	var pointLight = new THREE.PointLight(0xffffff, 1, 1000);
+	pointLight.position.set(0, 50, 0);
+	scene.add(pointLight);
+
+	//
 
 	var geometry = new THREE.BoxGeometry( 50, 50, 50, 1, 1, 1 );
 	var material = new THREE.MeshNormalMaterial(); 
@@ -75,7 +113,7 @@
 
 	// note: 4x4 checkboard pattern scaled so that each square is 25 by 25 pixels.
 	var ROOM_DEPTH = SCREEN_WIDTH;
-	const floorTexture = new THREE.TextureLoader().load( 'images/checkerboard.jpg' );
+	const floorTexture = new THREE.TextureLoader().load( 'https://threejs.org/examples/textures/terrain/grasslight-big.jpg' );
 	floorTexture.wrapS = floorTexture.wrapT = THREE.RepeatWrapping; 
 	floorTexture.repeat.set( 10, 10 );
 	// DoubleSide: render texture on both sides of mesh
@@ -172,6 +210,7 @@
 		// camera.updateProjectionMatrix();
 		onParamsChange();
 	}, false)
+
 	
 	// run the rendering loop
 	requestAnimationFrame(function animate(nowMsec){
